First banner spacing issue

--- a/styles.css
+++ b/styles.css
@@ -175,13 +175,16 @@ body {
   }
   
   .main-container {
+  
     display: flex;
+    justify-content: space-evenly;
     padding: 10px;
-    gap: 5px;
+    padding-bottom: 0px;
+    
     border: 1px solid #ccc;
     box-sizing: border-box;
     background: white;
-    margin: 15px;
+    margin: 25px;
     border-radius: 5px;
   }
   
@@ -190,6 +193,7 @@ body {
     background: white;
     padding: 5px;
     border-radius: 5px;
+    
   }
   
   .sidebar ul {
@@ -217,28 +221,29 @@ body {
   .user-card {
     width: 220px;
     padding: 5px;
-
+    height: 90%;
   }
   
   .user-info {
     background-color: #eef3fb;
-    text-align: center;
+    text-align: left;
     padding: 15px;
     border-radius: 10px;
     margin-bottom: 15px;
+    
+  }
+
+  .saad{
+    display: flex;
+    
+
   }
   
-  .avatar {
-    width: 50px;
-    height: 50px;
-    background: #d0e2f7;
-    border-radius: 50%;
-    margin: 0 auto 10px;
-  }
+  
   
   .user-info p {
-    margin: 10px 0;
-    font-size: 14px;
+    margin: 7px ;
+    font-size: 15px;
     color: #333;
   }
   
@@ -269,7 +274,7 @@ body {
     border-radius: 10px;
     padding: 15px;
     color: white;
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 10px;
   }
   
@@ -291,9 +296,22 @@ body {
 
 
 
-
-
-
+  .user-icon {
+    width: 40px;
+    height: 40px;
+    background-color: #cce6ff; /* Light blue */
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .user-icon svg {
+    width: 20px;
+    height: 20px;
+    fill: white;
+  }
+  
 
 
 
@@ -304,17 +322,19 @@ body {
 
   .electronic-banner {
     position: relative;
-    width: 60%;
+   
     
-    margin: 0 auto;
-    border-radius: 6px;
+    
+    height: 90%;
     overflow: hidden;
   }
   
   .electronic-banner img {
     width: 100%;
     display: block;
-    height: auto;
+    
+    height: 90%;
+    object-fit: cover;
 
   }
   
